# box

./: .gitignore
src/.cache/clangd/index/: inference.cpp.54480D0B5AC88296.idx  inference.h.28130EFBD2B433AE.idx
src/arithmetic/: CMakeLists.txt  CMakeLists（复件）.txt  package.xml
src/arithmetic/include/: inference.h
src/arithmetic/src/: arithmetic.cpp
src/arithmetic_problem/: CLAUDE.md  CMakeLists.txt  package.xml
src/arithmetic_problem/include/arithmetic_problem/: arithmetic_utils.hpp  calculate.h
src/arithmetic_problem/include/camera_driver/src/: camera_driver.cpp  pnp_kalman.cpp
src/arithmetic_problem/src/: calculate.cpp  main.cpp
src/box/: CMakeLists.txt  package.xml
src/box/include/: inference.h
src/box/src/: BoxIdentify.cpp  inference.cpp  main.cpp  tests.cpp
src/bridge/: CMakeLists.txt  package.xml
src/bridge/src/: new.cpp
src/close_pnp/: CMakeLists.txt  package.xml
src/close_pnp/include/: inference.h
src/close_pnp/src/: inference.cpp  pnp.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/: CMakeLists.txt
